<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastrarFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmailCadastrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmailCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputSenhaCadastrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/senha"
        app:layout_constraintEnd_toEndOf="@+id/textInputEmailCadastrar"
        app:layout_constraintStart_toStartOf="@+id/textInputEmailCadastrar"
        app:layout_constraintTop_toBottomOf="@+id/textInputEmailCadastrar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSenhaCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputRepetirSenhaCadastrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/repetir_senha"
        app:layout_constraintEnd_toEndOf="@+id/textInputSenhaCadastrar"
        app:layout_constraintStart_toStartOf="@+id/textInputSenhaCadastrar"
        app:layout_constraintTop_toBottomOf="@+id/textInputSenhaCadastrar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextRepetirSenhaCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonCadastrarCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/cadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputRepetirSenhaCadastrar" />

</androidx.constraintlayout.widget.ConstraintLayout>